[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/jack-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/slash.png" type="Texture" id=3]
[ext_resource path="res://Sprites/hp_under.png" type="Texture" id=4]
[ext_resource path="res://Sprites/hp_bar.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Sword.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.3099, 22.5532 )

[sub_resource type="Animation" id=2]
resource_name = "Attacking"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attacking_Down"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Attacking_Up"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 7, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.878431, 0.145098, 0.145098, 1 ), Color( 0.968627, 0.984314, 0.984314, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.964706, 0.929412, 0.929412, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 2 ]
}

[node name="Player" type="KinematicBody2D"]
pause_mode = 2
position = Vector2( 511.517, 300.964 )
collision_layer = 7
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 5
hframes = 3
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.188938, 1.60596 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attacking = SubResource( 2 )
anims/Attacking_Down = SubResource( 3 )
anims/Attacking_Up = SubResource( 4 )
anims/Dead = SubResource( 5 )
anims/Hurt = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Walking = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 28.5827, 15.061 )
rotation = 0.0331613
scale = Vector2( 5, 1 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Sprite2"]
collision_layer = 7
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite2/Area2D"]
polygon = PoolVector2Array( -8.62962, 18.278, -8.97065, 21.3473, -14.4271, 21.0062, -14.5977, 23.6492, -20.992, 24.0755, -20.3099, 12.3952, -10.2495, -1.16075, -20.8215, -13.0968, -13.7451, -20.8553, 14.8162, -1.50179, 11.3207, 6.08614 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 124.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp_Bar" type="TextureProgress" parent="CanvasLayer/VBoxContainer"]
margin_right = 124.0
margin_bottom = 11.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 15.0
margin_right = 124.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_right = 39.0
margin_bottom = 14.0
text = "Score:"

[node name="Score" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 43.0
margin_right = 43.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTime" type="Timer" parent="CanvasLayer"]
wait_time = 60.0

[node name=" GameOverScreen" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -20.0
margin_right = 37.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="CanvasLayer/ GameOverScreen"]
margin_right = 74.0
margin_bottom = 31.0
text = "Game over!
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer/ GameOverScreen"]
margin_top = 35.0
margin_right = 74.0
margin_bottom = 49.0

[node name="Restart_Button" type="Button" parent="CanvasLayer/ GameOverScreen"]
margin_top = 53.0
margin_right = 74.0
margin_bottom = 73.0
text = "Restart!"

[node name="NightFinishScreen" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -28.0
margin_right = 42.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NightScore" type="Label" parent="CanvasLayer/NightFinishScreen"]
margin_right = 84.0
margin_bottom = 14.0

[node name="OverScore" type="Label" parent="CanvasLayer/NightFinishScreen"]
margin_top = 18.0
margin_right = 84.0
margin_bottom = 32.0

[node name="NextNight" type="Button" parent="CanvasLayer/NightFinishScreen"]
margin_top = 36.0
margin_right = 84.0
margin_bottom = 56.0
text = "Next Night!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rot_pos" type="Position2D" parent="."]

[node name="Sword_Pos" type="Position2D" parent="Rot_pos"]
position = Vector2( 29.2564, 3.77899 )

[node name="Sword" parent="Rot_pos/Sword_Pos" instance=ExtResource( 6 )]
position = Vector2( -0.0978088, -5.29114 )
rotation = 1.5708

[node name="Tween" type="Tween" parent="Rot_pos"]

[node name="Swing_A" type="Position2D" parent="Rot_pos"]
position = Vector2( 28.8921, -23.9234 )

[node name="Swing_B" type="Position2D" parent="Rot_pos"]
position = Vector2( 28.524, 27.7879 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Sprite2/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="CanvasLayer/GameTime" to="." method="_on_GameTime_timeout"]
[connection signal="button_down" from="CanvasLayer/ GameOverScreen/Restart_Button" to="." method="_on_Restart_Button_button_down"]
[connection signal="button_down" from="CanvasLayer/NightFinishScreen/NextNight" to="." method="_on_NextNight_button_down"]
